# constitutional-cai

./: NOTES.md  README.md  pyproject.toml
cards/: cai-rlaif-v2.md  cai-rlaif.md  cai-sft.md
src/: benign_prep.py  cai_filter.py  cai_generate.py  cai_smoke.py  constitution.py  eval_generate.py  eval_prep.py  eval_score.py  merge_adapter.py  redteam.py  train_sft.py
